# cpp-embedded-assessment

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: c-cpp.yml  cmake.yml
include/assessment/event/: event.h  event_processor.h
include/assessment/hardware/: gpio_simulator.h
include/assessment/memory/: memory_pool.h
include/assessment/queue/: thread_safe_queue.h
src/: main.cpp
src/queue/: lockbased_queue.h  lockbased_queue_factory.h
